--- a/internal/vault/BUILD.bazel
+++ b/internal/vault/BUILD.bazel
@@ -10,6 +10,9 @@ go_library(
         "//pkg/util/pki:go_default_library",
         "@com_github_hashicorp_vault_api//:go_default_library",
         "@com_github_hashicorp_vault_sdk//helper/certutil:go_default_library",
+        "@io_k8s_api//authentication/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
     ],
 )
