--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -1095,6 +1095,9 @@ spec:
                           required:
                             - role
                           properties:
+                            audience:
+                              description: Audience to use when generating tokens for the service account referenced. Only used when serviceAccountRef is set.
+                              type: string
                             mountPath:
                               description: The Vault mountPath here is the mount path to use when authenticating with Vault. For example, setting a value to `/v1/auth/foo`, will use the path `/v1/auth/foo/login` to authenticate with Vault. If unspecified, the default value "/v1/auth/kubernetes" will be used.
                               type: string
@@ -1114,7 +1117,7 @@ spec:
                                   description: 'Name of the resource being referred to. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
                                   type: string
                             serviceAccountRef:
-                              description: "A reference to a service account that will be used to request a bound token (also known as \"projected token\"). To be able to request a token, the service account token mounted in the cert-manager's Pod must be bound to a role containing the following rule: \n apiGroups: [\"\"] resources: [\"serviceaccounts/token\"] verbs: [\"create\"]"
+                              description: "A reference to a service account that will be used to request a bound token (also known as \"projected token\"). This field should not be set if secretRef is set. To be able to request a token, cert-manager's service account must be bound to a role containing the following rule: \n apiGroups: [\"\"] resources: [\"serviceaccounts/token\"] resourceNames: [\"<REFERENCED_SERVICE_ACCOUNT_NAME>\"] verbs: [\"create\"]"
                               type: object
                               required:
                                 - name
